# sphinxcontrib-multisrc

./: .gitignore  .gitmodules  readme.rst  setup.cfg  setup.py
sphinxcontrib/: __init__.py  multipath.py  multisrc.py
