[metadata]
name = sphinxcontrib-multipath
version = 1.0
description = Sphinx support for multiple source paths
author = Read the Docs, Inc
author_email = dev@readthedocs.com
url = "https://github.com/rtfd/sphinxcontrib-multipath"
classifiers =
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7

[options]
packages = find:
namespace_packages = sphinxcontrib
include_package_data = True
zip_safe = False
install_requires =
	Sphinx>1.8

[tool:release]
github_owner = rtfd
github_repo = sphinxcontrib-multipath
